--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;600;700;800&family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     
-    <!-- Three.js and Loaders -->
-    <script src="https://unpkg.com/three@0.146.0/build/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@r146/examples/js/loaders/FontLoader.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@r146/examples/js/geometries/TextGeometry.js"></script>
+    <!-- Three.js and Loaders - Using consistent versions and reliable CDNs -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/FontLoader.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/geometries/TextGeometry.js"></script>
 
     <script>
       tailwind.config = {
@@ -132,5 +132,8 @@
   <body>
     <div class="noise-overlay"></div>
     <div id="root"></div>
+    <!-- Explicitly import index.tsx as a module to handle environments that don't auto-inject -->
+    <script type="module" src="./index.tsx"></script>
+    <noscript>You need to enable JavaScript to view this portfolio.</noscript>
   </body>
 </html>
