--- a/index.html
+++ b/index.html
@@ -117,22 +117,53 @@
         opacity: 0.05;
         background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
       }
+      #error-display {
+        display: none;
+        position: fixed;
+        inset: 0;
+        background: black;
+        color: #ff4444;
+        padding: 2rem;
+        z-index: 9999;
+        font-family: monospace;
+      }
     </style>
     <script type="importmap">
-    {
-      "imports": {
-        "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-        "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-        "react/": "https://esm.sh/react@^19.2.3/",
-        "react": "https://esm.sh/react@^19.2.3"
-      }
-    }
-    </script>
+{
+  "imports": {
+    "react-dom": "https://esm.sh/react-dom@18.3.1",
+    "react-dom/": "https://esm.sh/react-dom@18.3.1/",
+    "lucide-react": "https://esm.sh/lucide-react@0.454.0",
+    "react": "https://esm.sh/react@18.3.1",
+    "react/": "https://esm.sh/react@18.3.1/",
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+  }
+}
+</script>
   </head>
   <body>
+    <div id="error-display"></div>
     <div class="noise-overlay"></div>
     <div id="root"></div>
-    <!-- Explicitly import index.tsx as a module to handle environments that don't auto-inject -->
+    
+    <script type="module">
+      window.onerror = function(msg, url, lineNo, columnNo, error) {
+        const display = document.getElementById('error-display');
+        display.style.display = 'block';
+        display.innerHTML = `
+          <h1 style="font-size: 20px; font-weight: bold; margin-bottom: 1rem;">System Launch Failed</h1>
+          <p>Error: ${msg}</p>
+          <p>Location: ${url}:${lineNo}</p>
+          <div style="margin-top: 2rem; color: #888; font-size: 12px;">
+            Tip: GitHub Pages requires a build step for .tsx files. 
+            Ensure you have run 'npm run build' and deployed the 'dist' folder.
+          </div>
+        `;
+        return false;
+      };
+    </script>
+
     <script type="module" src="./index.tsx"></script>
     <noscript>You need to enable JavaScript to view this portfolio.</noscript>
   </body>
